--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <a href="/" class="btn">Home</a>
       <a href="/about" class="btn">About</a>
       <a href="/art" class="btn">Art</a>
-      <a href="/devs" class="btn">Devs</a>
+      <a href="/off-limits/devs" class="btn">Devs</a>
       <a href="/community" class="btn">Community</a>
       <a href="/partners" class="btn">Partners</a>
       <a href="/contact" class="btn">Contact</a>
