--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,13 @@
       <a href="/" class="btn">Home</a>
       <a href="/about" class="btn">About</a>
       <a href="/art" class="btn">Art</a>
-      <a href="/off-limits/devs" class="btn">Devs</a>
       <a href="/community" class="btn">Community</a>
       <a href="/partners" class="btn">Partners</a>
       <a href="/contact" class="btn">Contact</a>
+      <a href="Dev Pages" class="dropbtn"</a>
+ <div class="dropdown-content">
+    <a href="/off-limits/devs">Devs</a>
+    <a href="/off-limits/testing">Testing</a>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
